[workspace]
members = [
    "programs/*",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 1
incremental = false
debug = false
